<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="2dp" >

    <LinearLayout
        android:id="@+id/desc_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/desc_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/stubTitle"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/desc_vol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/stubVol"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/desc_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/desc_top"
        android:gravity="right"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/desc_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/stub_subtitle"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/desc_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stubAuthor"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/desc_middle"
        android:baselineAligned="false" >

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/desc_coverImage"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:contentDescription="@string/desc_cover_image_description"
                android:scaleType="fitStart"
                android:src="@drawable/dummyt_cover_image" />
        </FrameLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/desc_publisherIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/desc_publisher_icon_description"
                android:src="@drawable/null_image" />

            <TextView
                android:id="@+id/desc_publisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/desc_publisherIcon"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:lines="1"
                android:text="@string/stubPublisher"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/desc_issue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/desc_publisher"
                android:layout_below="@+id/desc_publisher"
                android:lines="1"
                android:text="@string/stub_issue"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/desc_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/desc_issue"
                android:layout_below="@+id/desc_issue"
                android:lines="1"
                android:text="@string/stub_register"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/desc_managementId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/desc_register"
                android:layout_below="@+id/desc_register"
                android:clickable="true"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:lines="1"
                android:text="@string/stub_managementId"
                android:textSize="14sp" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>